--- a/src/pages/wiki/[slug].astro
+++ b/src/pages/wiki/[slug].astro
@@ -11,10 +11,12 @@ import furniture from "./config/furniture.js";
 import camping from "./config/camping.js";
 import hearthandtimber from "./config/hearth-and-timber.js";
 import bakery from "./config/bakery.js";
+import lilisluckylures from "./config/lilis-lucky-lures.js";
 
 export function getStaticPaths() {
   return [
     { params: { slug: "brewery" } },
+    { params: { slug: "lilis-lucky-lures" } },
     { params: { slug: "farm-and-charm" } },
     { params: { slug: "herbalbrews" } },
     { params: { slug: "vinery" } },
@@ -33,6 +35,7 @@ const { slug } = Astro.params;
 const configs = {
   brewery,
   "farm-and-charm": farmandcharm,
+  "lilis-lucky-lures": lilisluckylures,
   herbalbrews,
   vinery,
   camping,
