--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -115,14 +115,14 @@ const mods = [
     source: "https://github.com/Let-s-Do-Collection/Vinery",
     tags: ["wine", "winemaking", "vineyard", "farming", "decor"],
   },
-  {
-    title: "WilderNature",
-    logo: "/assets/mod-logos/wildernature.png",
-    description: "TODO",
-    wiki: "/docs/mods/wildernature/",
-    source: "https://github.com/Let-s-Do-Collection/WilderNature",
-    tags: ["worldgen", "nature", "plants", "food"],
-  },
+{
+  title: "WilderNature",
+  logo: "/assets/mod-logos/wildernature.png",
+  description: "WilderNature expands the untamed side of the world with new animals, natural resources, and bounty rewards.",
+  wiki: "/docs/mods/wildernature/",
+  source: "https://github.com/Let-s-Do-Collection/WilderNature",
+  tags: ["worldgen", "wildlife", "animals", "food", "bounties"],
+},
   {
     title: "Hearth & Timber",
     logo: "/assets/mod-logos/hearth_and_timber.png",
