--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -37,14 +37,14 @@ const mods = [
   source: "https://github.com/Let-s-Do-Collection/Bakery",
   tags: ["food", "baking", "bread", "pastries", "sweets", "kitchen", "cozy", "lets-do"],
 },
-  {
-    title: "Beachparty",
-    logo: "/assets/mod-logos/beachparty.png",
-    description: "TODO",
-    wiki: "/docs/mods/beachparty/",
-    source: "https://github.com/Let-s-Do-Collection/Beachparty",
-    tags: ["decor", "summer", "beach", "biomes", "food", "plants"],
-  },
+{
+  title: "Beachparty",
+  logo: "/assets/mod-logos/beachparty.png",
+  description: "Summer-themed furniture, decor, and small interactive elements inspired by beach life.",
+  wiki: "/wiki/beachparty/",
+  source: "https://github.com/Let-s-Do-Collection/Beachparty",
+  tags: ["decor", "building", "furniture", "summer", "coastal"],
+},
   {
     title: "BloomingNature",
     logo: "/assets/mod-logos/bloomingnature.png",
