--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -45,14 +45,14 @@ const mods = [
   source: "https://github.com/Let-s-Do-Collection/Beachparty",
   tags: ["decor", "building", "furniture", "summer", "coastal"],
 },
-  {
-    title: "BloomingNature",
-    logo: "/assets/mod-logos/bloomingnature.png",
-    description: "TODO",
-    wiki: "/docs/mods/bloomingnature/",
-    source: "https://github.com/Let-s-Do-Collection/BloomingNature",
-    tags: ["plants", "decor", "worldgen", "nature", "biomes"],
-  },
+{
+  title: "BloomingNature",
+  logo: "/assets/mod-logos/bloomingnature.png",
+  description: "Enhances natural landscapes with denser vegetation, richer colors, and subtle environmental details.",
+  wiki: "/wiki/bloomingnature/",
+  source: "https://github.com/Let-s-Do-Collection/BloomingNature",
+  tags: ["nature", "plants", "worldgen", "decor", "atmosphere"],
+},
   {
     title: "Brewery",
     logo: "/assets/mod-logos/brewery.png",
