--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,19 +41,22 @@ import "../styles/global.css";
           {
             title: "Lili's Pottery",
             logo: "/assets/mod-logos-resized/lilis_pottery.png",
-            description: "Handcrafted pottery, functional vessels, and decorative blocks for a more detailed home. Shape clay into a variety of unique decorative elements.",
+            description:
+              "Handcrafted pottery, functional vessels, and decorative blocks for a more detailed home. Shape clay into a variety of unique decorative elements.",
             href: "/wiki/lilis-pottery/",
           },
           {
             title: "Alpine Whispers",
             logo: "/assets/mod-logos-resized/alpine_whispers.png",
-            description: "Explore reworked snowy biomes, meet fluffy sheep and reindeer, discover new alpine trees, and add cozy winter details to your home.",
+            description:
+              "Explore reworked snowy biomes, meet fluffy sheep and reindeer, discover new alpine trees, and add cozy winter details to your home.",
             href: "/wiki/alpine-whispers/",
           },
           {
             title: "Farm & Charm",
             logo: "/assets/mod-logos-resized/farm_and_charm.png",
-            description: "A cozy farming expansion centered around atmosphere, food preparation, and farm life, enhancing the feeling of everyday rural living.",
+            description:
+              "A cozy farming expansion centered around atmosphere, food preparation, and farm life, enhancing the feeling of everyday rural living.",
             href: "/wiki/farm-and-charm/",
           },
         ]}
@@ -98,7 +101,15 @@ import "../styles/global.css";
       </div>
 
       <div class="expectMedia">
-        <img class="expectImage" src="/assets/renderers/lili_gone_fishing.png" alt="That's me!" />
+        <img
+          class="expectImage"
+          src="/assets/renderers/lili_gone_fishing.png"
+          alt="That's me!"
+          loading="lazy"
+          decoding="async"
+          width="1200"
+          height="675"
+        />
       </div>
     </div>
   </section>
@@ -114,7 +125,15 @@ import "../styles/global.css";
 
     <div class="expectGrid">
       <div class="expectMedia">
-        <img class="expectImage" src="/assets/renderers/satisfy.png" alt="Me workin'!" />
+        <img
+          class="expectImage"
+          src="/assets/renderers/satisfy.png"
+          alt="Me workin'!"
+          loading="lazy"
+          decoding="async"
+          width="1200"
+          height="675"
+        />
       </div>
 
       <div class="expectPoints">
@@ -200,6 +219,10 @@ import "../styles/global.css";
           class="expectImage"
           src="/assets/renderers/play_with_us.png"
           alt="Playing together on the Let's Do server"
+          loading="lazy"
+          decoding="async"
+          width="1200"
+          height="675"
         />
       </div>
     </div>
