--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,8 +46,9 @@ const year = new Date().getFullYear();
     </div>
 
     <div class="footerText">
-      Copyright {year} © satisfy<br />
-      Let's Do is not affiliated with Mojang Studios
+      © {year} Marco<br />
+      Let's Do is not affiliated with Mojang Studios.<br />
+      Created with heart, dedicated to MissLilitu.
     </div>
 
     <div class="footerRight" aria-label="Social links">
