--- a/src/pages/mods.astro
+++ b/src/pages/mods.astro
@@ -100,14 +100,14 @@ const mods = [
     source: "https://github.com/Let-s-Do-Collection/HerbalBrews",
     tags: ["tea", "coffee", "flasks", "potions", "brewing", "cauldron", "kettle", "flowers", "wild-crops", "worldgen", "decor"],
   },
-  {
-    title: "Meadow",
-    logo: "/assets/mod-logos/meadow.png",
-    description: "TODO",
-    wiki: "/docs/mods/meadow/",
-    source: "https://github.com/Let-s-Do-Collection/Meadow",
-    tags: ["nature", "animals", "decor", "worldgen", "biomes", "food", "plants"],
-  },
+{
+  title: "Meadow",
+  logo: "/assets/mod-logos/meadow.png",
+  description: "Alpine atmosphere, livestock, wild plants, and cheese making.",
+  wiki: "/wiki/meadow/",
+  source: "https://github.com/Let-s-Do-Collection/Meadow",
+  tags: ["alpine", "nature", "animals", "decor", "building", "furniture", "worldgen", "plants", "food", "cheese"],
+},
   {
     title: "Vinery",
     logo: "/assets/mod-logos/vinery.png",
