--- a/src/pages/imprint.astro
+++ b/src/pages/imprint.astro
@@ -29,7 +29,6 @@ import "../styles/imprint.css";
       <div class="expectGrid imprintGrid">
         <div class="expectPoints">
           <div class="expectPoint imprintCard">
-
             <div class="imprintBlock">
               <div class="imprintBlockTitle">Responsible for content</div>
 
@@ -45,7 +44,7 @@ import "../styles/imprint.css";
 
             <div class="imprintBlock">
               <div class="imprintBlockTitle">Contact</div>
-              <div class="imprintLink">hello@lets-do.ch</div>
+              <a class="imprintLink" href="mailto:hello@lets-do.ch">hello@lets-do.ch</a>
             </div>
 
             <div class="imprintBlock">
@@ -70,7 +69,6 @@ import "../styles/imprint.css";
               <div class="imprintBlockTitle">Additional information</div>
               <a class="imprintLink" href="/privacy">Privacy Policy</a>
             </div>
-
           </div>
         </div>
 
