--- a/src/styles/mods.css
+++ b/src/styles/mods.css
@@ -3,7 +3,7 @@
 }
 
 .modsHeroBackground {
-  background-image: url('/assets/icons/hero_mods.webp');
+  background-image: url("/assets/icons/hero_mods.webp");
 }
 
 .modsSearch {
